blog: fix distorted images on mobile

--- a/assets/sass/_article.scss
+++ b/assets/sass/_article.scss
@@ -91,8 +91,12 @@
 
   &--content img {
     display: block;
-    max-width: 100%;
     margin: 0 auto;
+
+    @media (max-width: map-get($grid-breakpoints, md)) {
+      max-width: 100%;
+      height: auto;
+    }
   }
 
   &--content a:not(h1 > a, h2 > a, h3 > a) {
